# window_env_visual_control

./: Cargo.toml  DEVELOPMENT.md  README.md
.claude/: settings.local.json
examples/: run_example.bat  sample_profiles.yaml  test_features.bat
src/: lib.rs  main.rs
src/app/: app.rs  mod.rs  state.rs  theme.rs
src/app/components/: button.rs  card.rs  dialog.rs  header.rs  mod.rs  variable_list.rs
src/core/: env_manager.rs  mod.rs  refresh.rs  registry.rs
src/models/: env_variable.rs  error.rs  mod.rs  profile.rs
src/utils/: config.rs  logger.rs
tests/: security_test.rs
