[package]
name = "window_env_visual_control"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
egui-winit = "0.28"
egui_glow = "0.28"
eframe = { version = "0.28", features = ["glow"] }
glow = "0.13"
winit = "0.30"
winapi = { version = "0.3", features = ["winbase", "winreg", "winuser", "shellapi", "securitybaseapi", "processthreadsapi", "handleapi", "winerror", "winnt", "processenv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
